# english-exercises-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
english_exercises_app/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
english_exercises_app/exercises/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
english_exercises_app/exercises/migrations/: 0001_initial.py  0002_exercise.py  0003_alter_exercise_options_alter_file_options.py  0004_memory.py  0005_memory_skip_length.py  0006_alter_memory_current_count.py  0007_memory_add_audio.py  0008_audiofile.py
english_exercises_app/tasks/: apps.py  urls.py  views.py
english_exercises_app/templates/: base.html
english_exercises_app/templates/exercises/: create.html  show.html  stats.html  stats_delete.html  upload.html
english_exercises_app/templates/users/: create.html  delete.html  settings.html  update.html
english_exercises_app/users/: apps.py  forms.py  models.py  urls.py  views.py
english_exercises_app/users/migrations/: 0001_initial.py  0002_alter_user_options.py
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.json  styles.css
text_processing/: exercises.py  prepare_data.py  spacy_token_processing.py
