[tool.poetry]
name = "english-exercises-app"
version = "0.1.0"
description = ""
authors = ["tmvfb <darestade@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "english_exercises_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
