[tool.poetry]
name = "english-exercises-app"
version = "0.1.0"
description = ""
authors = ["tmvfb <darestade@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
	{include = "english_exercises_app"},
	{include = "text_processing"}
]

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
django-bootstrap5 = "^23.3"
gensim = "^4.3.1"
spacy = "^3.5.3"
sentence-splitter = "^1.4"
lemminflect = "^0.2.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
